--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -59,3 +59,21 @@ h1 {
 	padding-left: 4px;
 }
 
+hr {
+	border-top: 5px solid rgba(0, 0, 0, 0.1);
+	margin-top: 3px!important;
+  
+}
+
+.fill {
+    /*display: flex;*/
+    align-items: center;
+    overflow: hidden;
+	
+}
+
+.fill img {
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+    }
