--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -3,7 +3,7 @@
 
 html, body {
   <link rel="preconnect"href="https://fonts.gstatic.com" > <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"rel="stylesheet" > ;
-  font-size: 22px;
+  font-size: 25px;
 }
 
 .container-fluid {
@@ -46,7 +46,58 @@ h1 {
 .arrow-image {
   display: block;
   vertical-align: middle;
- 
+}
+
+.behance-image {
+	display: block;
+	vertical-align: middle;
+	background-image: url("../img/socialBehance.svg");
+	background-size: contain;
+	height: 40px;
+	width: 40px;
+}
+
+.behance-image:hover {
+	background-image: url("../img/socialBehance-hover.svg");
+}
+
+.dribble-image {
+	display: block;
+	vertical-align: middle;
+	background-image: url("../img/socialDribble.svg");
+	background-size: contain;
+	height: 40px;
+	width: 40px;
+}
+
+.dribble-image:hover {
+	background-image: url("../img/socialDribble-hover.svg");
+}
+
+.linkedin-image {
+	display: block;
+	vertical-align: middle;
+	background-image: url("../img/socialLinkedin.svg");
+	background-size: contain;
+	height: 40px;
+	width: 40px;
+}
+
+.linkedin-image:hover {
+	background-image: url("../img/socialLinkedin-hover.svg");
+}
+
+.instagram-image {
+	display: block;
+	vertical-align: middle;
+	background-image: url("../img/socialInstagram.svg");
+	background-size: contain;
+	height: 40px;
+	width: 40px;
+}
+
+.instagram-image:hover {
+	background-image: url("../img/socialInstagram-hover.svg");
 }
 
 .social-container {
@@ -64,7 +115,7 @@ h1 {
 hr {
 	border-top: 5px solid rgba(0, 0, 0, 0.1);
 	margin-top: 3px!important;
-  
+    
 }
 
 .project-cell {
@@ -83,3 +134,5 @@ hr {
 	width: 100%;
 	height: 100%;
 }
+
+
