--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -7,8 +7,8 @@ html, body {
 }
 
 .container-fluid {
-  padding-left: 80px;
-  padding-right: 80px;
+  padding-left: 80px!important;
+  padding-right: 80px!important;
 }
 
 .navbar {
@@ -135,4 +135,10 @@ hr {
 	height: 100%;
 }
 
+
+#img_wrap {
+    width: 100%;
+	height: 100%;
+	display: block;
+}
 
