--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -218,9 +218,7 @@ hr {
 }
 
 .my-form {
-	border: solid;
-	border-width: 1px;
-	border-color: #EFEFEF;
+	border: 1px solid #EFEFEF;
 	padding: 10px 18px;
 }
 
@@ -232,6 +230,14 @@ hr {
 	width: 705px;
 }
 
+.wrapper {
+	height: auto !important;
+	margin: 0 auto -110px;
+}
+.footer, .push {
+	height: 110px;
+}
+
 .text-footer{
 	height: 110px;
 	width: 100%;
@@ -240,6 +246,7 @@ hr {
 	justify-content: center;
 	align-items: center;
 	font-size: 18px;
+	padding: 1rem;
 }
 
 .text-footer p{
