--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -19,7 +19,7 @@ html, body {
 
 .navbar {
 	margin-top: 25px;
-	margin-bottom: 100px;
+	margin-bottom: 50px;
 	padding: 0;
 }
 
@@ -47,8 +47,12 @@ mark:hover {
 	background-color: #F4EE49;
 }
 
+.h1-custom {
+	font-size: 2.75rem;
+}
+
 @media only screen and (max-width: 767px){
-	.h1-mobile {
+	.h1-custom {
 		font-size: 2rem;
 	}
 }
