--- a/css/mobile-myStyle.css
+++ b/css/mobile-myStyle.css
@@ -7,7 +7,6 @@
 
 @media only screen and (max-width: 767px) {
     .navbar {
-        margin-top: 25px;
         margin-bottom: 65px;
         padding: 0 10px;
     }
@@ -92,5 +91,11 @@
 @media only screen and (max-width: 767px) {
     .click-submit {
         font-size: 18px;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .nav-link, .contacts-nav-link {
+        padding: 12px 0 !important;
     }
 }
