--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -15,13 +15,21 @@ img {
 }
 
 .navbar {
-	margin-top: 25px;
 	margin-bottom: 50px;
 	padding: 0;
+	box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
 .navbar-nav {
 	margin-left: auto !important;
+}
+
+.nav-link {
+	padding: 1rem;
+}
+
+.contacts-nav-link {
+	padding-right: 0 !important;
 }
 
 mark {
@@ -153,8 +161,8 @@ hr {
 	overflow: hidden;
 }
 
-.project-cell p{
-	margin-bottom: 0px;
+.project-cell p {
+	margin-bottom: 0;
 }
 
 .project-cell-caption {
@@ -268,4 +276,62 @@ footer, .push {
 ::placeholder {
 	color: #CECECE;
 	font-weight: 300;
+}
+
+/* TEST NAVBAR */
+
+.navbar-toggler {
+	border: none;
+	padding: 0;
+}
+
+.navbar-toggler:focus {
+	outline: 0;
+}
+
+.ham {
+	cursor: pointer;
+	-webkit-tap-highlight-color: transparent;
+	transition: transform 400ms;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+.hamRotate.active {
+	transform: rotate(45deg);
+}
+.hamRotate180.active {
+	transform: rotate(180deg);
+}
+.line {
+	fill:none;
+	transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+	stroke:#000;
+	stroke-width:5.5;
+	stroke-linecap:round;
+}
+.ham1 .top {
+	stroke-dasharray: 40 139;
+}
+.ham1 .bottom {
+	stroke-dasharray: 40 180;
+}
+.ham1.active .top {
+	stroke-dashoffset: -98px;
+}
+.ham1.active .bottom {
+	stroke-dashoffset: -138px;
+}
+.ham2 .top {
+	stroke-dasharray: 40 121;
+}
+.ham2 .bottom {
+	stroke-dasharray: 40 121;
+}
+.ham2.active .top {
+	stroke-dashoffset: -102px;
+}
+.ham2.active .bottom {
+	stroke-dashoffset: -102px;
 }
