--- a/css/mobile-myStyle.css
+++ b/css/mobile-myStyle.css
@@ -1,7 +1,6 @@
-@media only screen and (min-width: 768px) {
-    .container-fluid {
-        padding-left: 80px !important;
-        padding-right: 80px !important;
+@media only screen and (max-width: 350px) {
+    .p-text-anchor-point {
+        font-size: 18px;
     }
 }
 
@@ -9,6 +8,106 @@
     .navbar {
         margin-bottom: 65px;
         padding: 0 10px;
+    }
+
+    .h2-custom {
+        font-size: 1.75rem;
+    }
+
+    .social-icons {
+        margin-bottom: 45px;
+    }
+
+    .project-cell {
+        display: initial;
+        height: auto;
+    }
+
+    .project-cell-caption-container {
+        display: flex;
+        align-items: center;
+        margin-bottom: 0;
+        padding: 0 15px;
+    }
+
+
+    .project-cell-image-container {
+        padding-left: 15px;
+    }
+
+    .project-cell-row {
+        margin: 0;
+    }
+
+    .project-cell-caption-container {
+        display: flex;
+        align-items: center;
+        margin-bottom: 25px;
+    }
+
+    .project-cell-name {
+        font-weight: lighter;
+        font-size: 20px;
+    }
+
+    .project-cell-short-description {
+        font-weight: 600;
+        font-size: 24px;
+    }
+
+    .project-cell-hr {
+        border: 2px solid;
+    }
+
+    .project-cell-view-project {
+        font-size: 16px;
+    }
+
+    .div-anchor-point {
+        margin-top: 25px;
+        margin-bottom: 65px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+        .top-space {
+            margin-top: 15px;
+        }
+
+        .my-form {
+            font-size: 16px;
+        }
+
+        .click-submit {
+            font-size: 18px;
+        }
+
+        .nav-link, .contacts-nav-link {
+            padding: 12px 0 !important;
+        }
+
+        .image-product-detail {
+            margin-bottom: 10% !important;
+        }
+
+        .image-product-container {
+            margin-bottom: 10% !important;
+        }
+
+        .image-product-description {
+            font-size: 12px;
+        }
+
+        .product-detail-description {
+            font-size: 14px;
+        }
+}
+
+@media only screen and (min-width: 768px) {
+    .container-fluid {
+        padding-left: 80px !important;
+        padding-right: 80px !important;
     }
 }
 
@@ -18,90 +117,8 @@
     }
 }
 
-@media only screen and (max-width: 767px){
-    .h2-custom {
-        font-size: 1.75rem;
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    .project-cell {
-        display: initial;
-        height: auto;
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    .project-cell-caption-container {
-        display: flex;
-        align-items: center;
-        margin-bottom: 0;
-        padding: 0 15px;
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    .project-cell-image-container {
-        padding-left: 15px;
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    .project-cell-row {
-        margin: 0;
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    .project-cell-caption-container {
-        display: flex;
-        align-items: center;
-        margin-bottom: 25px;
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    .div-anchor-point {
-        margin-top: 25px;
-        margin-bottom: 65px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-}
-
-@media only screen and (max-width: 350px) {
-    .p-text-anchor-point {
-        font-size: 18px;
-    }
-}
-
 @media only screen and (max-width: 1200px) {
     .text-footer {
         font-size: 15px;
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    .top-space {
-        margin-top: 15px;
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    .my-form {
-        font-size: 16px;
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    .click-submit {
-        font-size: 18px;
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    .nav-link, .contacts-nav-link {
-        padding: 12px 0 !important;
     }
 }
