burger menu fix

--- a/src/app/src/navbar/navbar.component.css
+++ b/src/app/src/navbar/navbar.component.css
@@ -64,6 +64,16 @@ mark:hover {
   padding-left: 4px;
 }
 
+@media only screen and (max-width: 767px) {
+  #navbarSupportedContent {
+    overflow: hidden;
+  }
+
+  .nav-item {
+    display: initial;
+  }
+}
+
 /* HAMBURGER MENU */
 
 .navbar-toggler {
