--- a/src/app/src/navbar/navbar.component.html
+++ b/src/app/src/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand" href="#">
       <img class="navbar-logo" src="../../../assets/logo.svg" alt="Mirko D'Agnese">
     </a>
-    <button class="navbar-toggler" style="transform: scale(0.8)translateX(30px);" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button (click)="burgerMenuClicked()" class="navbar-toggler" style="transform: scale(0.8)translateX(30px);" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <svg class="ham hamRotate ham1" viewBox="0 0 100 100" width="80" onclick="this.classList.toggle('active')">
         <path class="line top" d="m 30,33 h 40 c 0,0 9.044436,-0.654587 9.044436,-8.508902 0,-7.854315 -8.024349,-11.958003 -14.89975,-10.85914 -6.875401,1.098863 -13.637059,4.171617 -13.637059,16.368042 v 40" />
         <path class="line middle" d="m 30,50 h 40" />
@@ -11,7 +11,7 @@
       </svg>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div [ngClass]="collapsed ? '' : ' show'" class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
 
         <li *ngFor="let tab of tabs; let i = index" class="nav-item" (click)="tabClicked(i)">
