--- a/src/app/src/projects/projects.component.html
+++ b/src/app/src/projects/projects.component.html
@@ -10,7 +10,7 @@
 </div>
 <div class="container-fluid">
   <div class="row" style="margin-top: 25px">
-    <a routerLink="/about" style="text-decoration: none; color: black">
+    <a href="/about" style="text-decoration: none; color: black">
       <div class="col-md" style="display: flex; align-items: baseline; margin-bottom: 0.5rem">
         <p style="float: left; margin-bottom: 0">ABOUT ME</p>
         <div class="arrow-container">
