--- a/src/app/src/contact/contact.component.html
+++ b/src/app/src/contact/contact.component.html
@@ -46,7 +46,7 @@
     </div>
     <input type="text" name="{{ gotchaId }}" style="display:none" />
     <div style="display: flex; align-items: center">
-      <button (click)="thankYou()" class="click-submit" type="submit" name="submit"> Submit </button>
+      <button (click)="onSubmit()" class="click-submit" type="submit" name="submit"> Submit </button>
     </div>
   </form>
 </div>
