--- a/src/app/src/thank-you/thank-you.component.html
+++ b/src/app/src/thank-you/thank-you.component.html
@@ -1,3 +1,3 @@
-<div id="thanks-container" style="display: flex; align-items: center; justify-content: center;">
-    <h2>Thank you!</h2>
+<div id="thanks-container" class="container-fluid" style="display: flex; align-items: center; justify-content: center;">
+    <h2 id="result" style="text-align: center">Thank You!</h2>
 </div>
