--- a/src/app/src/navbar/navbar.component.html
+++ b/src/app/src/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav id="myLogo" class="navbar navbar-expand-lg navbar-light bg-light">
+<nav id="myLogo" class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img class="navbar-logo" src="../../../assets/logo.svg" alt="Mirko D'Agnese">
