--- a/src/app/src/project-detail/project-detail.component.html
+++ b/src/app/src/project-detail/project-detail.component.html
@@ -14,15 +14,24 @@
         <img *ngIf="image.layout === 0" id='product-image-0' class='image-product-detail' style='aspect-ratio: 1400/800;' src='{{ image.source }}' alt=''>
 
         <!-- TWO_COLUMNS Layout -->
-        <div *ngIf="image.layout === 1" class='col-md'>
-          <div class='row' [ngStyle]="(image.description && image.description.length > 0) || image.twoSources.length === 1 ? {'margin-bottom': 0} : null">
-            <div *ngFor="let source of image.twoSources; let i = index"
-                 class='col-md-6 image-product-detail'
-                 [ngStyle]="i === 0 ? {'padding-left': 0} : {'padding-right': 0}">
-              <img id='product-image-1' class='image-product-detail' src='{{ source }}' alt=''>
-            </div>
+        <div *ngIf="image.layout === 1" class="row">
+          <div class='col-md'>
+            <div class='row' [ngStyle]="(image.description && image.description.length > 0) || image.twoSources.length === 1 ? {'margin-bottom': 0} : null">
+              <div *ngFor="let source of image.twoSources; let i = index"
+                   class='col-md-6 image-product-detail'
+                   [ngStyle]="i === 0 ? {'padding-left': 0} : {'padding-right': 0}">
+                <img id='product-image-1' class='image-product-detail' style="aspect-ratio: 700/800" src='{{ source }}' alt=''>
+              </div>
 
-            <p *ngIf="image.description && image.description.length > 0" class='image-product-description'> {{ image.description }} </p>
+              <p *ngIf="image.description && image.description.length > 0" class='image-product-description'> {{ image.description.replace(regex, "") }}
+                <a *ngIf="image.description.includes('www')"
+                   href="{{ image.description.match(regex)[0] }}"
+                   target="_blank"
+                >
+                  {{ image.description.match(regex)[0] }}
+                </a>
+              </p>
+            </div>
           </div>
         </div>
 
@@ -32,7 +41,14 @@
             <img id='product-image-2' class='image-product-detail image-product-detail-mobile' style='aspect-ratio: 700/800' src='{{ image.source }}' alt=''>
           </div>
           <div class='col-md-6 image-product-description-container'>
-            <p class='image-product-description'> {{ image.description }} </p>
+            <p class='image-product-description'> {{ image.description.replace(regex, "") }}
+              <a *ngIf="image.description.includes('www')"
+                 href="{{ image.description.match(regex)[0] }}"
+                 target="_blank"
+              >
+                {{ image.description.match(regex)[0] }}
+              </a>
+            </p>
           </div>
         </div>
 
@@ -40,7 +56,14 @@
         <div *ngIf="image.layout === 3" class="col-md image-product-container" style="margin-bottom: 0">
           <div class='row'>
             <img id='product-image-3' class='image-product-detail' src='{{ image.source }}' alt=''>
-            <p class='image-product-description'> {{ image.description }} </p>
+            <p class='image-product-description'> {{ image.description.replace(regex, "") }}
+              <a *ngIf="image.description.includes('www')"
+                 href="{{ image.description.match(regex)[0] }}"
+                 target="_blank"
+              >
+                {{ image.description.match(regex)[0] }}
+              </a>
+            </p>
           </div>
         </div>
 
@@ -48,7 +71,14 @@
         <div *ngIf="image.layout === 4" id='desc-only' class='row image-product-container'>
           <div id='desc-only-space'></div>
           <div class='col-md image-product-description-container'>
-            <p class='image-product-description' style='margin-bottom: 0'> {{ image.description }} </p>
+            <p class='image-product-description'> {{ image.description.replace(regex, "") }}
+              <a *ngIf="image.description.includes('www')"
+                 href="{{ image.description.match(regex)[0] }}"
+                 target="_blank"
+              >
+                {{ image.description.match(regex)[0] }}
+              </a>
+            </p>
           </div>
           <script>
             if (window.innerWidth > 767) {
