--- a/src/app/src/projects/projects.component.html
+++ b/src/app/src/projects/projects.component.html
@@ -11,8 +11,8 @@
 <div class="container-fluid">
   <div class="row" style="margin-top: 25px">
     <a href="/about" style="text-decoration: none; color: black">
-      <div class="col-md" style="display: flex; align-items: baseline; margin-bottom: 0.5rem">
-        <p style="float: left; margin-bottom: 0">ABOUT ME</p>
+      <div class="col-md about-me" style="display: flex; align-items: baseline; margin-bottom: 0.5rem">
+        <p style="margin-bottom: 0">ABOUT ME</p>
         <div class="arrow-container">
           <img class="arrow-image" style="width: 30px" src="../../../assets/arrowRight.svg" alt="">
         </div>
