--- a/src/app/src/anchor-point/anchor-point.component.css
+++ b/src/app/src/anchor-point/anchor-point.component.css
@@ -4,6 +4,21 @@
   padding: 0 80px;
   margin: 0 5px;
 }
+
+.back-to-top {
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
+
+.back-to-top .arrow-image {
+  transition: margin-bottom 200ms;
+}
+
+.back-to-top:hover .arrow-image {
+  margin-bottom: 15px;
+}
+
 .div-anchor-point {
   margin-top: 65px;
   margin-bottom: 65px;
@@ -23,6 +38,10 @@
   .p-text-anchor-point {
     font-size: 18px;
   }
+
+  .back-to-top {
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -32,5 +51,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .back-to-top {
+    width: 100%;
   }
 }
