--- a/src/app/src/anchor-point/anchor-point.component.html
+++ b/src/app/src/anchor-point/anchor-point.component.html
@@ -1,6 +1,6 @@
 <div class="anchor-point">
   <a href="" onclick="$('html, body').animate({ scrollTop: $('#myLogo').offset().top }, 1000 ); return false;" style="text-decoration: none">
-    <div class="div-anchor-point">
+    <div class="div-anchor-point back-to-top">
       <p class="p-text-anchor-point">Back to top</p>
       <div class="arrow-container">
         <img class="arrow-image" src="assets/arrowRight.svg" alt="" style="transform: rotate(270deg); width: 30px">
