Caffe del nonno

--- a/src/app/src/project-detail/project-detail.component.html
+++ b/src/app/src/project-detail/project-detail.component.html
@@ -40,7 +40,7 @@
         </div>
 
         <!-- RIGHT_DESCRIPTION Layout -->
-        <div *ngIf="image.layout === 2" class='row product-right-description' style='width: 100%'>
+        <div *ngIf="image.layout === 2" class='row product-right-description' style='width: 100%; margin: 0 !important;'>
           <div class='col-md-6 image-product-detail' style='padding: 0'>
             <img id='product-image-2' class='image-product-detail image-product-detail-mobile' style='aspect-ratio: 700/800' src='{{ image.source }}' alt=''>
           </div>
