Cambiata descrizione About e aggiunto favicon

--- a/src/app/src/about/about.component.html
+++ b/src/app/src/about/about.component.html
@@ -1,7 +1,7 @@
 <div class="about-container container-fluid">
   <div [ngClass]="getColClass()">
     <h4 class="about-title">Oh Hey! It’s nice to meet you.</h4>
-    <p class="about-description">I'm a creative innovator, branding strategist, and designer with experience that creates impactful visual solutions for industries. I graduated at the Comics School of Naples, studying for three years graphic and web design. <br>My main skillsets include companies' logo and brand creation, typography, advertising for social media, posters, labels, and User Interface (UI), User Experience (UX) design and development.<br>I have the ability to take complex data and present them in a clear, digestible way to the audience.</p>
+    <p class="about-description">I'm a creative innovator, branding strategist, and designer with experience that creates impactful visual solutions for industries. I graduated at the Comics School of Naples, studying graphic and web design from October 2018 to September 2021. Later, from September 2021 to June 2022, I attended the Apple Developer Academy in partnership with University of Naples Federico II, where I learned how to build iOS Apps, mastering Swift Programming Language and Apple Human Interface Guidelines. <br>My skillset includes also companies' logo and brand creation, typography, advertising for social media, posters, labels, User Interface (UI), User Experience (UX) design and development.<br>I know how to present complex data in a clear and user-friendly way to the audience.</p>
   </div>
   <div [ngClass]="getColClass()">
     <img class="about-image" src="assets/mirkodagnese.jpg" alt=""/>
